# ffmpegapi

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  run.py
app/: __init__.py  config.py  exceptions.py  main.py  models.py  task.py
app/utils/: __init__.py  command_processing.py  file_operations.py  system.py  validation.py
tests/: test_root.py  test_run.py  test_utils.py
